docs: update readme with config step

--- a/cdn/dropin.html
+++ b/cdn/dropin.html
@@ -5,7 +5,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Airwallex Checkout Playground</title>
     <!-- Step #1: Load Checkout Universal Module Definition (UMD) bundle js-->
-    <script src="https://checkout-staging.airwallex.com/assets/bundle.xx.xx.xx.min.js"></script>
+    <script src="https://checkout.airwallex.com/assets/bundle.xx.xx.xx.min.js"></script>
   </head>
   <body>
     <h1>DropIn integration</h1>
