--- a/cdn/full-featured-card.html
+++ b/cdn/full-featured-card.html
@@ -8,23 +8,23 @@
     <script src="https://checkout.airwallex.com/assets/bundle.xx.xx.xx.min.js"></script>
   </head>
   <body>
-    <h1>Card integration</h1>
-    <div id='card'></div>
+    <h1>Full Featured Card integration</h1>
+    <div id='full-featured-card'></div>
     <script>
       // Step #2: Initialize the Airwallex global context for event communication
       Airwallex.init({
         env: 'staging', // Setup which env('staging' | 'demo' | 'prod') you would like to integrate with
         origin: window.location.origin, // Setup your event target to receive the browser events message
       });
-      // Step #3: Create 'card' element
-      const card = Airwallex.createElement('card', {
+      // Step #3: Create 'fullFeaturedCard' element
+      const card = Airwallex.createElement('fullFeaturedCard', {
         intent: { // Required, dropIn use intent Id and client_secret to prepare checkout
           id: 'replace-with-your-intent-id',
           client_secret: 'replace-with-your-client-secret'
         }
       });
-      // Step #4: Mount 'card' element
-      card.mount('card');
+      // Step #4: Mount 'fullFeaturedCard' element
+      card.mount('full-featured-card');
       window.addEventListener('onSuccess', (event) => {
         /*
           ... Handle event
