feat: using lts airwallex-payment-element version and update react example

--- a/cdn/card.html
+++ b/cdn/card.html
@@ -20,7 +20,7 @@
   <script>
     // Step #2: Initialize the Airwallex global context for event communication
     Airwallex.init({
-      env: 'staging', // Setup which env('staging' | 'demo' | 'prod') you would like to integrate with
+      env: 'demo', // Setup which env('staging' | 'demo' | 'prod') you would like to integrate with
       origin: window.location.origin, // Setup your event target to receive the browser events message
     });
     // Step #3: Create 'card' element
