--- a/cdn/hpp.html
+++ b/cdn/hpp.html
@@ -14,7 +14,7 @@
       document.getElementById('hpp').addEventListener('click', () => {
         // Step #2: Call the HPP function to checkout 
         Airwallex.redirectToCheckout({
-          env: 'staging', // Which env('staging' | 'demo' | 'prod') you would like to integrate with
+          env: 'demo', // Which env('staging' | 'demo' | 'prod') you would like to integrate with
           id: 'replace-with-your-intent-id',
           client_secret: 'replace-with-your-client-secret'
         });
