--- a/cdn/payment-request-button.html
+++ b/cdn/payment-request-button.html
@@ -14,7 +14,7 @@
     <script>
       // Step #2: Initialize the Airwallex global context for event communication
       Airwallex.init({
-        env: 'staging', // Which env('staging' | 'demo' | 'prod') you would like to integrate with
+        env: 'demo', // Which env('staging' | 'demo' | 'prod') you would like to integrate with
         origin: window.location.origin, // Setup your event target to receive the browser events message
       });
       const paymentRequestButton = Airwallex.createElement('paymentRequestButton', {
