--- a/integrations/cdn/dropin.html
+++ b/integrations/cdn/dropin.html
@@ -1,36 +1,93 @@
+<!-- 
+  dropin.html
+  Airwallex Payment Demo - Static HTML.  Created by Charlie Lang and Josie Ku.
+
+  airwallex-payment-elements Dropin element integration in Static HTML
+  Comments with "Example" demonstrate how states can be integrated
+  with the element, they can be removed.
+
+  Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob/master/docs/dropin.md
+ -->
+
 <!doctype html>
 <html>
   <head lang='en'>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Airwallex Checkout Playground</title>
-    <!-- Step #1: Load Checkout Universal Module Definition (UMD) bundle js-->
-    <script src="https://checkout.airwallex.com/assets/bundle.xx.xx.xx.min.js"></script>
+    <!-- 
+      Step #1: Import airwallex-payment-elements bundle 
+              - You MUST replace the bundle version to the latest NPM version
+                in order to import the package properly!
+    -->
+    <script src="https://checkout.airwallex.com/assets/bundle.x.x.x.min.js"></script>
   </head>
   <body>
     <h1>DropIn integration</h1>
-    <div id='dropIn'></div>
+    <p id="loading">Loading...</p> <!-- Example: loading state when element is not yet mounted -->
+    <!-- 
+      Step #3: Add an empty container for the dropIn element to be injected into 
+      - Ensure this is the only element in your document with this id, otherwise the element may fail to mount.
+    -->
+    <div 
+      id="dropIn"
+      style="display:none;"></div> <!-- Example: hide container when element has not mounted -->
     <script>
       // Step #2: Initialize the Airwallex global context for event communication
       Airwallex.init({
-        env: 'demo', // Setup which env('staging' | 'demo' | 'prod') you would like to integrate with
+        env: 'staging', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
         origin: window.location.origin, // Setup your event target to receive the browser events message
+        fonts: [
+          // Customizes the font for the payment elements
+          {
+            src:
+              'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
+            family: 'AxLLCircular',
+            weight: 400,
+          },
+        ],
       });
-      // Step #3: Create 'dropIn' element
+      // Step #4: Create 'dropIn' element
       const dropIn = Airwallex.createElement('dropIn', {
-        intent: { // Required, dropIn use intent Id and client_secret to prepare checkout
+        intent: {
+          // Required, dropIn use intent Id and client_secret to prepare checkout
           id: 'replace-with-your-intent-id',
-          client_secret: 'replace-with-your-client-secret'
-        }
+          client_secret: 'replace-with-your-client-secret',
+        },
       });
-      // Step #4: Mount 'dropIn' element
-      dropIn.mount('dropIn');
-      window.addEventListener('onSuccess', (event) => {
+      // Step #5: Mount 'dropIn' element
+      dropIn.mount('dropIn'); // This 'dropIn' id MUST MATCH the id on your empty container created in Step 3
+
+      // Step #6: Add an event listener to handle events when the element is mounted
+      window.addEventListener('onReady', (event) => {
         /*
           ... Handle event
         */
-        alert(JSON.stringify(event.detail));
-      })
+        document.getElementById('dropIn').style.display = 'block'; // Example: show element when mounted
+        document.getElementById('loading').style.display = 'none'; // Example: hide loading tag when element is mounted
+        window.alert(event.detail);
+      });
+
+      // Step #7: Add an event listener to handle events when the payment is successful.
+      window.addEventListener('onSuccess', (event) => {
+        /*
+          ... Handle event on success
+        */
+        window.alert(event.detail);
+      });
+
+      // Step #8: Add an event listener to handle events when the payment has failed.
+      window.addEventListener('onError', (event) => {
+        /*
+          ... Handle event on error
+        */
+        console.log(event.detail);
+      });
     </script>
   </body>
+  <style>
+    #dropIn {
+      width: 540px;
+    }
+  </style>
 </html>
