--- a/integrations/cdn/full-featured-card.html
+++ b/integrations/cdn/full-featured-card.html
@@ -1,36 +1,94 @@
+<!-- 
+full-featured-card.html
+Airwallex Payment Demo - Static HTML.  Created by Charlie Lang and Josie Ku.
+
+airwallex-payment-elements Full Featured Card element integration in Static HTML
+Comments with "Example" demonstrate how states can be integrated
+with the element, they can be removed.
+
+Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob/master/docs/fullfeaturedcard.md
+-->
+
 <!doctype html>
 <html>
-  <head lang='en'>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <head lang="en">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Airwallex Checkout Playground</title>
-    <!-- Step #1: Load Checkout Universal Module Definition (UMD) bundle js-->
-    <script src="https://checkout.airwallex.com/assets/bundle.xx.xx.xx.min.js"></script>
+    <!-- 
+      Step #1: Import airwallex-payment-elements bundle 
+              - You MUST replace the bundle version to the latest NPM version
+                in order to import the package properly!
+    -->
+    <script src="https://checkout.airwallex.com/assets/bundle.x.x.x.min.js"></script>
   </head>
   <body>
-    <h1>Full Featured Card integration</h1>
-    <div id='full-featured-card'></div>
+    <h1>Full Feature Card integration</h1>
+    <p id="loading">Loading...</p> <!-- Example: loading state when element is not yet mounted -->
+    <!-- 
+      Step #3: Add an empty container for the full-featured-card element to be injected into 
+      - Ensure this is the only element in your document with this id, otherwise the element may fail to mount.
+    -->
+    <div 
+      id="full-featured-card" 
+      style="display:none;"></div> <!-- Example: hide container when element has not mounted -->
     <script>
       // Step #2: Initialize the Airwallex global context for event communication
       Airwallex.init({
-        env: 'demo', // Setup which env('staging' | 'demo' | 'prod') you would like to integrate with
+        env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
         origin: window.location.origin, // Setup your event target to receive the browser events message
+        fonts: [
+          // Customizes the font for the payment elements
+          {
+            src:
+              'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
+            family: 'AxLLCircular',
+            weight: 400,
+          },
+        ],
       });
-      // Step #3: Create 'fullFeaturedCard' element
-      const card = Airwallex.createElement('fullFeaturedCard', {
-        intent: { // Required, dropIn use intent Id and client_secret to prepare checkout
-          id: 'replace-with-your-intent-id',
-          client_secret: 'replace-with-your-client-secret'
-        }
+      // Step #4: Create 'fullFeaturedCard' element
+      const element = Airwallex.createElement('fullFeaturedCard', {
+        intent: {
+          // Required, fullFeaturedCard uses intent Id and client_secret to prepare checkout
+         id: 'replace-with-your-intent-id',
+         client_secret: 'replace-with-your-client-secret',
+        },
       });
-      // Step #4: Mount 'fullFeaturedCard' element
-      card.mount('full-featured-card');
+      // Step #5: Mount 'fullFeaturedCard' element
+      element.mount('full-featured-card'); // This 'full-featured-card' id MUST MATCH the id on your empty container created in Step 3
+
+      // Step #6: Add an event listener to handle events when the element is mounted
+      window.addEventListener('onReady', (event) => {
+        /**
+         * ... Handle event when element is mounted
+         */
+        document.getElementById('full-featured-card').style.display = 'block'; // Example: show element when mounted
+        document.getElementById('loading').style.display = 'none'; // Example: hide loading tag when element is mounted
+        console.log('Element is ready', event.detail);
+      });
+
+      // Step #7: Add an event listener to handle events when the payment is successful.
       window.addEventListener('onSuccess', (event) => {
         /*
-          ... Handle event
+          ... Handle event on success
         */
-        alert(JSON.stringify(event.detail));
-      })
+        window.alert(`Payment succeeded! ${event.detail}`);
+      });
+
+      // Step #8: Add an event listener to handle events when the payment has failed.
+      window.addEventListener('onError', (event) => {
+        /*
+          ... Handle event on error
+        */
+        console.log('There was an error', event.detail.error);
+      });
     </script>
   </body>
+  <style>
+    #full-featured-card {
+      width: 540px;
+    }
+  </style>
 </html>
