--- a/integrations/cdn/wechat.html
+++ b/integrations/cdn/wechat.html
@@ -1,37 +1,84 @@
+<!-- 
+wechat.html
+Airwallex Payment Demo - Static HTML.  Created by Charlie Lang and Josie Ku.
+
+airwallex-payment-elements Wechat element integration in Static HTML
+Comments with "Example" demonstrate how states can be integrated
+with the element, they can be removed.
+
+Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob/master/docs/wechat.md
+-->
+
 <!doctype html>
 <html>
   <head lang='en'>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Airwallex Checkout Playground</title>
-    <!-- Step #1: Load Checkout Universal Module Definition (UMD) bundle js-->
-    <script src="https://checkout.airwallex.com/assets/bundle.xx.xx.xx.min.js"></script>
+    <!-- 
+      Step #1: Import airwallex-payment-elements bundle 
+              - You MUST replace the bundle version to the latest NPM version
+                in order to import the package properly!
+    -->
+    <script src="https://checkout.airwallex.com/assets/bundle.x.x.x.min.js"></script>
   </head>
   <body>
-    <h1>Airwallex checkout integration</h1>
-    <!-- Wechat integration-->
     <h1>Wechat integration</h1>
-    <div id='wechat'></div>
+    <!-- 
+      Step #3: Add an empty container for the wechat element to be injected into 
+      - Ensure this is the only element in your document with this id, otherwise the element may fail to mount.
+    -->
+    <div id="wechat"></div>
     <script>
       // Step #2: Initialize the Airwallex global context for event communication
       Airwallex.init({
-        env: 'demo', // Which env('staging' | 'demo' | 'prod') you would like to integrate with
+        env: 'staging', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
         origin: window.location.origin, // Setup your event target to receive the browser events message
+        fonts: [
+          // Customizes the font for the payment elements
+          {
+            src:
+              'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
+            family: 'AxLLCircular',
+            weight: 400,
+          },
+        ],
       });
-      const wechat = Airwallex.createElement('wechat', {
-        intent: { // Required, dropIn use intent Id and client_secret to prepare checkout
+      // Step #4: Create 'wechat' element
+      const element = Airwallex.createElement('wechat', {
+        intent: {
+          // Required, wechat element uses intent Id and client_secret to prepare checkout
           id: 'replace-with-your-intent-id',
-          client_secret: 'replace-with-your-client-secret'
-        }
+          client_secret: 'replace-with-your-client-secret',
+        },
       });
-      // Step #4: Mount 'wechat' element
-      wechat.mount('wechat');
-      window.addEventListener('onSuccess', (event) => {
+
+      // Step #5: Mount 'wechat' element
+      element.mount('wechat'); // This 'wechat' id MUST MATCH the id on your empty container created in Step 3
+
+      // Step #6: Add an event listener to handle events when the element is mounted
+      window.addEventListener('onReady', (event) => {
         /*
           ... Handle event
         */
-        alert(JSON.stringify(event.detail));
-      })
+        console.log('Element is ready', event.detail);
+      });
+
+      // Step #7: Add an event listener to handle events when the payment is successful.
+      window.addEventListener('onSuccess', (event) => {
+        /*
+          ... Handle event on success
+        */
+        window.alert(event.detail);
+      });
+
+      // Step #8: Add an event listener to handle events when the payment has failed.
+      window.addEventListener('onError', (event) => {
+        /*
+          ... Handle event on error
+        */
+        console.log('There is an error', event.detail);
+      });
     </script>
   </body>
 </html>
