--- a/integrations/vue/index.html
+++ b/integrations/vue/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>demointegration</title>
+    <title>Airwallex Payment Demo - Vue</title>
   </head>
   <body>
     <div id="app"></div>
