docs: [APAF-1316] update docs

--- a/integrations/cdn/hpp.html
+++ b/integrations/cdn/hpp.html
@@ -29,7 +29,7 @@
     <button id="hpp">Redirect to HPP</button>
     <script>
       // Step #2: Initialize the Airwallex package with the appropriate environment
-      Airwallex.init({
+      Airwallex.loadAirwallex({
         env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
         origin: window.location.origin, // Setup your event target to receive the browser events message
       });
