--- a/integrations/cdn/card.html
+++ b/integrations/cdn/card.html
@@ -9,96 +9,120 @@
   Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob/master/docs/card.md
  -->
 
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
-<head lang='en'>
-  <meta charset='utf-8'>
-  <link rel="stylesheet" href="style.css">
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <title>Airwallex Checkout Playground</title>
-  <!-- 
+  <head lang="en">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Airwallex Checkout Playground</title>
+    <!-- 
     Step #1: Import airwallex-payment-elements bundle 
               - You MUST replace the bundle version to the latest NPM version
                 in order to import the package properly!
   -->
-  <script src="https://checkout.airwallex.com/assets/bundle.x.x.x.min.js"></script>
-</head>
+    <script src="https://checkout.airwallex.com/assets/bundle.x.x.x.min.js"></script>
+  </head>
 
-<body>
-  <h1>Card integration</h1>
-  <label>
-    Card Information
-    <!-- Step #3a: Add an empty container for the card element to be injected into -->
-    <div 
-      id="card" 
-      style="display:none;"></div> <!-- Example: styling added to hide the container before element is loaded-->
-  </label>
-  <!-- Step #3b: Add a submit button to trigger the payment request -->
-  <button 
-    id="submit" 
-    style="display:none;"> <!-- Example: styling added to hide the container before element is loaded-->
-    Submit
-  </button> 
+  <body>
+    <h1>Card integration</h1>
+    <!-- Styling example below: Setting container to display nothing when element is not mounted -->
+    <div id="card-container" style="display: none">
+      <!-- Step #3a: Add an empty container for the card element to be injected into -->
+      <div id="card"></div>
+      <!-- Step #3b: Add a submit button to trigger the payment request -->
+      <button id="submit" disabled="true">Submit</button>
+    </div>
+    <!-- Example response message containers -->
+    <p id="error"></p>
+    <p id="success">Payment successful!</p>
+    <script>
+      // Step #2: Initialize the Airwallex global context for event communication
+      Airwallex.init({
+        env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
+        origin: window.location.origin, // Setup your event target to receive the browser events message
+        fonts: [
+          // Customizes the font for the payment elements
+          {
+            src:
+              'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
+            family: 'AxLLCircular',
+            weight: 400,
+          },
+        ],
+      });
+      // Step #4: Create 'card' element
+      const card = Airwallex.createElement('card');
 
-  <script>
-    // Step #2: Initialize the Airwallex global context for event communication
-    Airwallex.init({
-      env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
-      origin: window.location.origin, // Setup your event target to receive the browser events message
-      fonts: [
-        // Customizes the font for the payment elements
-        {
-          src:
-            'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
-          family: 'AxLLCircular',
-          weight: 400,
-        },
-      ],
-    });
-    // Step #4: Create 'card' element
-    const card = Airwallex.createElement('card');
+      // Step #5: Mount card element
+      card.mount('card');
 
-    // Step #5: Mount card element
-    card.mount('card');
+      // Step #6a: Add a button handler to trigger the payment request
+      document.getElementById('submit').addEventListener('click', () => {
+        document.getElementById('error').style.display = 'none'; // Example: hide error
+        document.getElementById('submit').innerHTML = 'Processing...'; // Example: set submitting state
+        document.getElementById('submit').disabled = true; // Example: disable button to prevent double submission
 
-    // Step #6a: Add a button handler to trigger the payment request
-    document.getElementById('submit').addEventListener('click', () => {
-      Airwallex.confirmPaymentIntent({
-        element: card,
-        id: 'replace-with-your-intent-id',
-        client_secret: 'replace-with-your-client-secret',
-      })
-      .then((response) => {
-        // Step #6b: Listen to the request response
-        /* Handle confirm response */
-        window.alert(JSON.stringify(response));
-      })
-      .catch((response) => {
-        // Step #6c: Listen to the error response
-        /* Handle error response */
-        console.log('There is an error', response);
-      })
-    });
+        Airwallex.confirmPaymentIntent({
+          element: card,
+          id: 'replace-with-your-intent-id',
+          client_secret: 'replace-with-your-client-secret',
+        })
+          .then((response) => {
+            // Step #6b: Listen to the request response
+            /* Handle confirm response */
+            document.getElementById('success').style.display = 'block'; // Example: show success message
+            document.getElementById('submit').innerHTML = 'Submit'; // Example: reset button state
+            document.getElementById('submit').disabled = false; // Example: reset button state
+            window.alert(JSON.stringify(response));
+          })
+          .catch((response) => {
+            // Step #6c: Listen to the error response
+            /* Handle error response */
+            document.getElementById('error').style.display = 'block'; // Example: show error message
+            document.getElementById('error').innerHTML = response.message; // Example: fill in error message
+            document.getElementById('submit').innerHTML = 'Submit'; // Example: reset button state
+            document.getElementById('submit').disabled = false; // Example: reset button state
+            console.error(`There was an error, ${JSON.stringify(response)}`);
+          });
+      });
 
-    // Step #7: Add an event listener to ensure the element is mounted
-    window.addEventListener('onReady', (event) => {
-      /*
+      // Step #7: Add an event listener to ensure the element is mounted
+      window.addEventListener('onReady', (event) => {
+        /*
       ... Handle event
        */
-      document.getElementById('card').style.display = 'block'; // Example: show element when it is mounted
-      document.getElementById('submit').style.display = 'block'; // Example: show element when it is mounted
-      console.log('Element is ready', event.detail);
-    });
-  </script>
-</body>
-<style>
-  #card {
-    width: 400px;
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 10px;
-  }
-</style>
+        document.getElementById('card-container').style.display = 'block'; // Example: show element when it is mounted
+        document.getElementById('submit').style.display = 'block'; // Example: show element when it is mounted
+        console.log('Element is ready', event.detail);
+      });
 
+      // Step #8: Add an event listener to validate element input
+      window.addEventListener('onChange', (event) => {
+        const { complete } = event.detail;
+        document.getElementById('submit').disabled = !complete; // Example: only enable button when element input is completed
+      });
+
+      // Step #9: Add an event listener to handle errors
+      window.addEventListener('onError', (event) => {
+        const { error } = event.detail;
+        document.getElementById('error').style.display = 'block'; // Example: show error
+        document.getElementById('error').innerHTML = error.message; // Example: set error message
+        console.log('There was an error', error);
+      });
+    </script>
+  </body>
+  <style>
+    #card {
+      border: 1px solid #612fff;
+      border-radius: 5px;
+      padding: 5px 10px;
+      width: 400px;
+      box-shadow: #612fff 0px 0px 0px 1px;
+      min-height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  </style>
 </html>
