--- a/integrations/cdn/dropin.html
+++ b/integrations/cdn/dropin.html
@@ -9,11 +9,12 @@
   Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob/master/docs/dropin.md
  -->
 
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head lang='en'>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <head lang="en">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Airwallex Checkout Playground</title>
     <!-- 
       Step #1: Import airwallex-payment-elements bundle 
@@ -24,18 +25,20 @@
   </head>
   <body>
     <h1>DropIn integration</h1>
-    <p id="loading">Loading...</p> <!-- Example: loading state when element is not yet mounted -->
+    <!-- Example below: loading state when element is not yet mounted -->
+    <p id="loading">Loading...</p>
     <!-- 
-      Step #3: Add an empty container for the dropIn element to be injected into 
-      - Ensure this is the only element in your document with this id, otherwise the element may fail to mount.
-    -->
-    <div 
-      id="dropIn"
-      style="display:none;"></div> <!-- Example: hide container when element has not mounted -->
+       Step #3: Add an empty container for the dropIn element to be injected into 
+       - Ensure this is the only element in your document with this id, otherwise the element may fail to mount.
+     -->
+    <div id="dropIn"></div>
+    <!-- Example: Response message containers -->
+    <p id="error"></p>
+    <p id="success">Payment Successful!</p>
     <script>
       // Step #2: Initialize the Airwallex global context for event communication
       Airwallex.init({
-        env: 'staging', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
+        env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
         origin: window.location.origin, // Setup your event target to receive the browser events message
         fonts: [
           // Customizes the font for the payment elements
@@ -65,7 +68,7 @@
         */
         document.getElementById('dropIn').style.display = 'block'; // Example: show element when mounted
         document.getElementById('loading').style.display = 'none'; // Example: hide loading tag when element is mounted
-        window.alert(event.detail);
+        console.log('Element is ready', event.detail);
       });
 
       // Step #7: Add an event listener to handle events when the payment is successful.
@@ -73,7 +76,8 @@
         /*
           ... Handle event on success
         */
-        window.alert(event.detail);
+        document.getElementById('success').style.display = 'block'; // Example: show success block
+        window.alert(JSON.stringify(event.detail));
       });
 
       // Step #8: Add an event listener to handle events when the payment has failed.
@@ -81,13 +85,18 @@
         /*
           ... Handle event on error
         */
-        console.log(event.detail);
+        const { error } = event.detail;
+        document.getElementById('error').style.display = 'block'; // Example: show error block
+        document.getElementById('error').innerHTML = error.message; // Example: set error message
+        console.error('There was an error', error);
       });
     </script>
   </body>
   <style>
     #dropIn {
       width: 540px;
+      /* Example: to hide element before it is loaded */
+      display: none;
     }
   </style>
 </html>
