--- a/integrations/cdn/full-featured-card.html
+++ b/integrations/cdn/full-featured-card.html
@@ -9,11 +9,11 @@ with the element, they can be removed.
 Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob/master/docs/fullfeaturedcard.md
 -->
 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head lang="en">
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Airwallex Checkout Playground</title>
     <!-- 
@@ -25,14 +25,16 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
   </head>
   <body>
     <h1>Full Feature Card integration</h1>
-    <p id="loading">Loading...</p> <!-- Example: loading state when element is not yet mounted -->
+    <!-- Example: loading state when element is not yet mounted -->
+    <p id="loading">Loading...</p>
     <!-- 
       Step #3: Add an empty container for the full-featured-card element to be injected into 
       - Ensure this is the only element in your document with this id, otherwise the element may fail to mount.
     -->
-    <div 
-      id="full-featured-card" 
-      style="display:none;"></div> <!-- Example: hide container when element has not mounted -->
+    <div id="full-featured-card"></div>
+    <!-- Example: Response message containers -->
+    <p id="error"></p>
+    <p id="success">Payment Successful!</p>
     <script>
       // Step #2: Initialize the Airwallex global context for event communication
       Airwallex.init({
@@ -52,8 +54,8 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
       const element = Airwallex.createElement('fullFeaturedCard', {
         intent: {
           // Required, fullFeaturedCard uses intent Id and client_secret to prepare checkout
-         id: 'replace-with-your-intent-id',
-         client_secret: 'replace-with-your-client-secret',
+          id: 'replace-with-your-intent-id',
+          client_secret: 'replace-with-your-client-secret',
         },
       });
       // Step #5: Mount 'fullFeaturedCard' element
@@ -74,6 +76,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
         /*
           ... Handle event on success
         */
+        document.getElementById('success').style.display = 'block'; // Example: show success block
         window.alert(`Payment succeeded! ${event.detail}`);
       });
 
@@ -82,13 +85,18 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
         /*
           ... Handle event on error
         */
-        console.log('There was an error', event.detail.error);
+        const { error } = event.detail;
+        document.getElementById('error').style.display = 'block'; // Example: show error block
+        document.getElementById('error').innerHTML = error.message; // Example: set error message
+        console.error('There was an error', event.detail.error);
       });
     </script>
   </body>
   <style>
     #full-featured-card {
       width: 540px;
+      /* Example: hide container when element has not mounted */
+      display: none;
     }
   </style>
 </html>
