--- a/integrations/cdn/card.html
+++ b/integrations/cdn/card.html
@@ -1,6 +1,6 @@
 <!-- 
   card.html
-  Airwallex Payment Demo - Static HTML.  Created by Shirley Chen and Josie Ku.
+  Airwallex Payment Demo - Static HTML.  Created by Shirly Chen and Josie Ku.
 
   airwallex-payment-elements Card element integration in Static HTML
   Comments with "Example" demonstrate how states can be integrated
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Airwallex Checkout Playground</title>
     <!-- 
-    Step #1: Import airwallex-payment-elements bundle 
+    STEP #1: Import airwallex-payment-elements bundle 
               - You MUST replace the bundle version to the latest NPM version
                 in order to import the package properly!
   -->
@@ -28,16 +28,16 @@
     <h1>Card integration</h1>
     <!-- Styling example below: Setting container to display nothing when element is not mounted -->
     <div id="card-container" style="display: none">
-      <!-- Step #3a: Add an empty container for the card element to be injected into -->
+      <!-- STEP #3a: Add an empty container for the card element to be injected into -->
       <div id="card"></div>
-      <!-- Step #3b: Add a submit button to trigger the payment request -->
+      <!-- STEP #3b: Add a submit button to trigger the payment request -->
       <button id="submit" disabled="true">Submit</button>
     </div>
     <!-- Example response message containers -->
     <p id="error"></p>
     <p id="success">Payment successful!</p>
     <script>
-      // Step #2: Initialize the Airwallex global context for event communication
+      // STEP #2: Initialize the Airwallex global context for event communication
       Airwallex.init({
         env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
         origin: window.location.origin, // Setup your event target to receive the browser events message
@@ -51,13 +51,13 @@
           },
         ],
       });
-      // Step #4: Create 'card' element
+      // STEP #4: Create 'card' element
       const card = Airwallex.createElement('card');
 
-      // Step #5: Mount card element
+      // STEP #5: Mount card element
       card.mount('card');
 
-      // Step #6a: Add a button handler to trigger the payment request
+      // STEP #6a: Add a button handler to trigger the payment request
       document.getElementById('submit').addEventListener('click', () => {
         document.getElementById('error').style.display = 'none'; // Example: hide error
         document.getElementById('submit').innerHTML = 'Processing...'; // Example: set submitting state
@@ -69,7 +69,7 @@
           client_secret: 'replace-with-your-client-secret',
         })
           .then((response) => {
-            // Step #6b: Listen to the request response
+            // STEP #6b: Listen to the request response
             /* Handle confirm response */
             document.getElementById('success').style.display = 'block'; // Example: show success message
             document.getElementById('submit').innerHTML = 'Submit'; // Example: reset button state
@@ -77,7 +77,7 @@
             window.alert(JSON.stringify(response));
           })
           .catch((response) => {
-            // Step #6c: Listen to the error response
+            // STEP #6c: Listen to the error response
             /* Handle error response */
             document.getElementById('error').style.display = 'block'; // Example: show error message
             document.getElementById('error').innerHTML = response.message; // Example: fill in error message
@@ -87,7 +87,7 @@
           });
       });
 
-      // Step #7: Add an event listener to ensure the element is mounted
+      // STEP #7: Add an event listener to ensure the element is mounted
       window.addEventListener('onReady', (event) => {
         /*
       ... Handle event
@@ -97,13 +97,13 @@
         console.log('Element is ready', event.detail);
       });
 
-      // Step #8: Add an event listener to validate element input
+      // STEP #8: Add an event listener to validate element input
       window.addEventListener('onChange', (event) => {
         const { complete } = event.detail;
         document.getElementById('submit').disabled = !complete; // Example: only enable button when element input is completed
       });
 
-      // Step #9: Add an event listener to handle errors
+      // STEP #9: Add an event listener to handle errors
       window.addEventListener('onError', (event) => {
         const { error } = event.detail;
         document.getElementById('error').style.display = 'block'; // Example: show error
