--- a/integrations/cdn/dropin.html
+++ b/integrations/cdn/dropin.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Airwallex Checkout Playground</title>
     <!-- 
-      Step #1: Import airwallex-payment-elements bundle 
+      STEP #1: Import airwallex-payment-elements bundle 
               - You MUST replace the bundle version to the latest NPM version
                 in order to import the package properly!
     -->
@@ -28,7 +28,7 @@
     <!-- Example below: loading state when element is not yet mounted -->
     <p id="loading">Loading...</p>
     <!-- 
-       Step #3: Add an empty container for the dropIn element to be injected into 
+       STEP #3: Add an empty container for the dropIn element to be injected into 
        - Ensure this is the only element in your document with this id, otherwise the element may fail to mount.
      -->
     <div id="dropIn"></div>
@@ -36,7 +36,7 @@
     <p id="error"></p>
     <p id="success">Payment Successful!</p>
     <script>
-      // Step #2: Initialize the Airwallex global context for event communication
+      // STEP #2: Initialize the Airwallex global context for event communication
       Airwallex.init({
         env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
         origin: window.location.origin, // Setup your event target to receive the browser events message
@@ -50,7 +50,7 @@
           },
         ],
       });
-      // Step #4: Create 'dropIn' element
+      // STEP #4: Create 'dropIn' element
       const dropIn = Airwallex.createElement('dropIn', {
         intent: {
           // Required, dropIn use intent Id and client_secret to prepare checkout
@@ -58,10 +58,10 @@
           client_secret: 'replace-with-your-client-secret',
         },
       });
-      // Step #5: Mount 'dropIn' element
+      // STEP #5: Mount 'dropIn' element
       dropIn.mount('dropIn'); // This 'dropIn' id MUST MATCH the id on your empty container created in Step 3
 
-      // Step #6: Add an event listener to handle events when the element is mounted
+      // STEP #6: Add an event listener to handle events when the element is mounted
       window.addEventListener('onReady', (event) => {
         /*
           ... Handle event
@@ -71,7 +71,7 @@
         console.log('Element is ready', event.detail);
       });
 
-      // Step #7: Add an event listener to handle events when the payment is successful.
+      // STEP #7: Add an event listener to handle events when the payment is successful.
       window.addEventListener('onSuccess', (event) => {
         /*
           ... Handle event on success
@@ -80,7 +80,7 @@
         window.alert(JSON.stringify(event.detail));
       });
 
-      // Step #8: Add an event listener to handle events when the payment has failed.
+      // STEP #8: Add an event listener to handle events when the payment has failed.
       window.addEventListener('onError', (event) => {
         /*
           ... Handle event on error
