--- a/integrations/cdn/wechat.html
+++ b/integrations/cdn/wechat.html
@@ -17,7 +17,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Airwallex Checkout Playground</title>
     <!-- 
-      Step #1: Import airwallex-payment-elements bundle 
+      STEP #1: Import airwallex-payment-elements bundle 
               - You MUST replace the bundle version to the latest NPM version
                 in order to import the package properly!
     -->
@@ -26,7 +26,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
   <body>
     <h1>Wechat integration</h1>
     <!-- 
-      Step #3: Add an empty container for the wechat element to be injected into 
+      STEP #3: Add an empty container for the wechat element to be injected into 
       - Ensure this is the only element in your document with this id, otherwise the element may fail to mount.
     -->
     <div id="wechat"></div>
@@ -34,7 +34,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
     <p id="error"></p>
     <p id="success">Payment Successful!</p>
     <script>
-      // Step #2: Initialize the Airwallex global context for event communication
+      // STEP #2: Initialize the Airwallex global context for event communication
       Airwallex.init({
         env: 'staging', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
         origin: window.location.origin, // Setup your event target to receive the browser events message
@@ -48,7 +48,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
           },
         ],
       });
-      // Step #4: Create 'wechat' element
+      // STEP #4: Create 'wechat' element
       const element = Airwallex.createElement('wechat', {
         intent: {
           // Required, wechat element uses intent Id and client_secret to prepare checkout
@@ -57,10 +57,10 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
         },
       });
 
-      // Step #5: Mount 'wechat' element
+      // STEP #5: Mount 'wechat' element
       element.mount('wechat'); // This 'wechat' id MUST MATCH the id on your empty container created in Step 3
 
-      // Step #6: Add an event listener to handle events when the element is mounted
+      // STEP #6: Add an event listener to handle events when the element is mounted
       window.addEventListener('onReady', (event) => {
         /*
           ... Handle event
@@ -68,7 +68,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
         console.log('Element is ready', event.detail);
       });
 
-      // Step #7: Add an event listener to handle events when the payment is successful.
+      // STEP #7: Add an event listener to handle events when the payment is successful.
       window.addEventListener('onSuccess', (event) => {
         /*
           ... Handle event on success
@@ -77,7 +77,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
         window.alert(event.detail);
       });
 
-      // Step #8: Add an event listener to handle events when the payment has failed.
+      // STEP #8: Add an event listener to handle events when the payment has failed.
       window.addEventListener('onError', (event) => {
         /*
           ... Handle event on error
